<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:padding="5dip"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="16dip" android:layout_width="fill_parent" android:text="@string/lab_name"></TextView>
<EditText android:layout_below="@id/TextView01" android:layout_height="wrap_content" android:id="@+id/editName" android:layout_width="fill_parent" android:hint="@string/lab_enter_name"></EditText>
<TextView android:id="@+id/TextView02" android:layout_below="@id/editName" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="16dip" android:textStyle="bold" android:layout_marginTop="5dip" android:text="@string/lab_publish"></TextView>
<CheckBox android:layout_below="@id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textStyle="bold" android:id="@+id/cbImagePortfolio" android:text="@string/lab_cb_portfolio"></CheckBox>
<CheckBox android:layout_below="@id/cbImagePortfolio" android:layout_height="wrap_content" android:id="@+id/cbExpPoints" android:layout_width="fill_parent" android:textStyle="bold" android:text="@string/lab_exp_points"></CheckBox>
<RelativeLayout android:id="@+id/RelativeLayout02" android:layout_below="@id/cbExpPoints" android:layout_height="fill_parent" android:layout_width="fill_parent" android:gravity="bottom|center_horizontal"><Button android:layout_height="wrap_content" android:id="@+id/btnSaveAdd" android:layout_width="200dip" android:text="@string/lab_save_add_another"></Button>
<Button android:layout_below="@id/btnSaveAdd" android:layout_height="wrap_content" android:id="@+id/btnSave" android:layout_width="100dip" android:textStyle="bold" android:text="@string/lab_save"></Button>
<Button android:layout_height="wrap_content" android:id="@+id/btnCancel" android:layout_below="@id/btnSaveAdd" android:layout_toRightOf="@id/btnSave" android:layout_width="100dip" android:textStyle="bold" android:text="@string/lab_cancel"></Button>
</RelativeLayout>
</RelativeLayout>
