<?xml version="1.0" encoding="utf-8"?>
<!-- Portfolio/primary blogger configuration page -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lab_pri_conf"
        android:textSize="16dip"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:paddingLeft="5dip"
        android:text="@string/lab_pupil_blog_url"
        android:textSize="15dip"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:inputType="textUri"
        android:text="http://demopupil.primaryblogger.co.uk/"
        android:textSize="13dip" >
    </EditText>

    <CheckBox
        android:id="@+id/cbUseDefault"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:checked="true"
        android:text="@string/lab_use_def_conf"
        android:visibility="gone" >
    </CheckBox>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:text="@string/lab_teacher_username"
        android:textSize="16dip"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTeacherUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:hint="@string/lab_teacher_username" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:text="@string/lab_teacher_password"
        android:textSize="16dip"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTeacherPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:hint="@string/lab_teacher_password"
        android:inputType="textPassword" >
    </EditText>

    <CheckBox
        android:id="@+id/cbShowPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:text="@string/lab_show_password" >
    </CheckBox>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnTest"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/lab_test"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/lab_save"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/lab_cancel"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

</LinearLayout>