<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dip"
        android:text="@string/lab_name"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/editName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView01"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_marginLeft="7dip"
        android:text="@string/lab_publish"
        android:textStyle="bold" android:visibility="gone">
    </TextView>

    <CheckBox
        android:id="@+id/cbImageToPortfolio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView02"
        android:layout_marginLeft="7dip"
        android:text="@string/lab_cb_portfolio"
        android:textStyle="bold" >
    </CheckBox>

    <CheckBox
        android:id="@+id/cbExpPoints"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbImageToPortfolio"
        android:layout_marginLeft="7dip"
        android:text="@string/lab_exp_points"
        android:textStyle="bold"
        android:visibility="invisible" >
    </CheckBox>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/cbExpPoints"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnEditAdd"
            android:layout_width="210dip"
            android:layout_height="wrap_content"
            android:text="@string/lab_edit_pupil"
            android:visibility="gone" >
        </Button>

        <Button
            android:id="@+id/btnSaveAdd"
            android:layout_width="210dip"
            android:layout_height="wrap_content"
            android:text="@string/lab_save_add_another" >
        </Button>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="105dip"
                android:layout_height="wrap_content"
                android:text="@string/lab_save"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="105dip"
                android:layout_height="wrap_content"
                android:text="@string/lab_cancel"
                android:textStyle="bold" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>